--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.newsfeed"
+        applicationId "com.example.newsapp"
         minSdk 23
         targetSdk 31
         versionCode 1
@@ -32,49 +33,64 @@ android {
 }
 
 dependencies {
-
-    def koin_version = "3.1.2"
     def lifecycle_version = "2.4.0-rc01"
-    def retrofit_version = "2.9.0"
+    def retrofit_versions = "2.9.0"
+    def retrofit_converter_version = "2.9.0"
+    def koin_version = "3.1.2"
+    def login_interceptor = "5.0.0-alpha.2"
+    def timber_version = "5.0.1"
+    def coroutines_version = "1.5.2"
     def room_version = "2.3.0"
     def glide_version = "4.12.0"
+    def adapter_delegates_version = "4.3.0"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Koin core features
-    implementation "io.insert-koin:koin-core:$koin_version"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // network
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_versions"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_converter_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$login_interceptor"
+
     // Koin main features for Android (Scope,ViewModel ...)
     implementation "io.insert-koin:koin-android:$koin_version"
     // Koin Java Compatibility
     implementation "io.insert-koin:koin-android-compat:$koin_version"
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // Koin for Jetpack WorkManager
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    // Koin for Jetpack Compose
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+
+    implementation "io.insert-koin:koin-core:$koin_version"
+
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    // OkHttpLogging
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.2"
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Timber (log)
+    implementation "com.jakewharton.timber:timber:$timber_version"
+
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    // Glide
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Glide (load image)
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
-    // AdapterDelegate
-    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.0"
 
-
-
-
-
+    // Adapter delegate
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapter_delegates_version"
 }
